<resources>
  <string name="app_name">Group06Project02</string>
  <string name="login">Login</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="chorescore">ChoreScore</string>
  <string name="create_account">Create Account</string>
  <string name="forgot_password">Forgot Password</string>
  <string name="forgot_password_text">Forgot Password</string>
  <string name="email_address">Email Address</string>
  <string name="submit">Submit</string>
  <string name="reset_password">Reset Password</string>
  <string name="current_score">Current Score:</string>
  <string name="_0">0</string>
  <string name="completed_chores">Completed Chores:</string>
  <string name="active_chores">Active Chores:</string>
  <string name="enter_chore_id">Enter Chore ID</string>
  <string name="complete_chore">Complete Chore</string>
  <string name="create_new_chore">Create New Chore:</string>
  <string name="chore_title">Chore Title:</string>
  <string name="name">Name</string>
  <string name="description">Description</string>
  <string name="due_date">Due Date:</string>
  <string name="assign_to">Assign to:</string>
  <string name="score">Score:</string>
  <string name="create">Create</string>
  <string name="all_active_chores">All Active Chores:</string>
  <string name="chore_description">Chore Description:</string>
  <string name="admin">Admin</string>
  <string name="Group">group</string>
  <string name="mm_dd_yyyy">mm/dd/yyyy</string>
  <string name="channel_description" />
</resources>
