<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ChildChoreDisplayActivity"
  android:background="@drawable/gradient_background">


  <TextView
    android:id="@+id/currentScoreTextView"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_marginTop="48dp"
    android:text="@string/current_score"
    android:textAlignment="center"
    android:textSize="25sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/totalScoreTextView"
    android:layout_width="100dp"
    android:layout_height="50dp"
    android:text="@string/_0"
    android:textAlignment="center"
    android:textSize="30sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/currentScoreTextView" />

  <TextView
    android:id="@+id/completedChoresTextView"
    android:layout_width="350dp"
    android:layout_height="50dp"
    android:layout_marginTop="464dp"
    android:text="@string/completed_chores"
    android:textAlignment="center"
    android:textSize="35sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/activeChoresTextView"
    android:layout_width="350dp"
    android:layout_height="50dp"
    android:layout_marginTop="236dp"
    android:text="@string/active_chores"
    android:textAlignment="center"
    android:textSize="35sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/choreIdEditText"
    android:layout_width="137dp"
    android:layout_height="50dp"
    android:layout_marginStart="36dp"
    android:layout_marginTop="160dp"
    android:hint="@string/enter_chore_id"
    android:inputType="number"
    android:textAlignment="center"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/choreCompletionButton"
    android:layout_width="168dp"
    android:layout_height="50dp"
    android:text="@string/complete_chore"
    android:layout_marginTop="160dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.571"
    app:layout_constraintStart_toEndOf="@+id/choreIdEditText"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/childActiveChoresRecyclerView"
    android:layout_width="0dp"
    android:layout_height="175dp"
    android:padding="2dp"
    app:layout_constraintBottom_toTopOf="@+id/completedChoresTextView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/activeChoresTextView"
    tools:listitem="@layout/chore_recycler_item" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/childCompletedChoresRecyclerView"
    android:layout_width="0dp"
    android:layout_height="175dp"
    android:padding="2dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/completedChoresTextView"
    tools:listitem="@layout/chore_recycler_item" />

  <TextView
    android:id="@+id/usernameText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:text="Username"
    app:layout_constraintBottom_toTopOf="@+id/currentScoreTextView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />


  <Button
    android:id="@+id/goBackButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:padding="0pt"
    android:text="Go Back"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
