<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ForgotPasswordActivity"
  android:background="@drawable/gradient_background">

  <TextView
    android:id="@+id/forgotPasswordTextView"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_margin="50dp"
    android:layout_marginTop="100dp"
    android:gravity="center"
    android:text="@string/forgot_password_text"
    android:textSize="36sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/userNameLoginEditText"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_margin="16dp"
    android:autofillHints="Please enter username"
    android:gravity="center"
    android:hint="@string/username"
    android:inputType="text"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView" />

  <!--    <EditText-->
  <!--        android:id="@+id/emailAddressEditText"-->
  <!--        android:layout_width="match_parent"-->
  <!--        android:layout_height="75dp"-->
  <!--        android:layout_margin="16dp"-->
  <!--        android:autofillHints="Please enter email address"-->
  <!--        android:gravity="center"-->
  <!--        android:hint="@string/email_address"-->
  <!--        android:inputType="textEmailAddress"-->
  <!--        android:textSize="24sp"-->
  <!--        app:layout_constraintEnd_toEndOf="parent"-->
  <!--        app:layout_constraintStart_toStartOf="parent"-->
  <!--        app:layout_constraintTop_toBottomOf="@+id/userNameLoginEditText" />-->

  <EditText
    android:id="@+id/resetPasswordEditText"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_margin="16dp"
    android:autofillHints="Please enter a reset password"
    android:gravity="center"
    android:hint="@string/reset_password"
    android:inputType="textPassword"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/userNameLoginEditText" />

  <Button
    android:id="@+id/submitButton"
    android:layout_width="150dp"
    android:layout_height="70dp"
    android:layout_margin="32dp"
    android:text="@string/submit"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/resetPasswordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
